tmp_32ce.txt
tmp_32.cpp:1:1: error: ‘lkhlkh’ does not name a type
    1 | lkhlkh
      | ^~~~~~
